[workspace]
members = [
    "demo",
    "call_server",
    "hdfs",
    "lesson_3",
    "lesson_4",
    "lesson_5",
    "lesson_6",
    "lesson_6_py",
    "lesson_7",
    "lesson_8",
    "lesson_9",
    "lesson_10",
    "lesson_11",
    "lesson_12",
    "lesson_13",
    "lesson_14",
    "lesson_15",
    "lesson_16",
    "lesson_17",
    "lesson_18",
    "lesson_19",
    "lesson_20",
    "lesson_21_kv_server",
    "lesson_22_kv_server",
    "lesson_mid_term_rgrep",
    "lesson_mid_term_rgrep_tyr",
    "lesson_23",
    "lesson_24",
    "lesson_25",
    "lesson_26_kv_server",
    "lesson_28",
    "lesson_29",
]
