[package]
name = "call_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4.3" # web 服务器
anyhow = "1" # 错误处理
colored = "2" # 命令终端多彩显示
jsonxf = "1.1" # JSON pretty-print 格式化
mime = "0.3" # 处理 mime类型
clap = { version = "3.0.0-rc.8", features = ["derive"] } # 命令行解析
tokio = { version = "1", features = ["full"] } # 异步处理库
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit", "hedge"] } # 服务处理及中间件
tower-http = { version = "0.1", features = ["add-extension", "compression-full", "trace"] } # http 中间件
http = "0.2.1"
tracing = "0.1" # 日志和追踪
tracing-subscriber = "0.2" # 日志和追踪
hyper = "0.14.16"
