[package]
name = "lesson_16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "test_slice"
path = "src/test_slice.rs"
test = false
bench = false

[[bin]]
name = "test_str"
path = "src/test_str.rs"
test = false
bench = false

[[bin]]
name = "test_box"
path = "src/test_box.rs"
test = false
bench = false


[dependencies]
