[package]
name = "lesson_29"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
libp2p = { version = "0.39",  features = ["tcp-tokio"] }