[package]
name = "lesson_36_kv_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kvs"
path = "src/server.rs"

[[bin]]
name = "kvc"
path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bytes = "1" # 高效处理网络 buffer 的库
prost = "0.9" # 处理 protobuf 的代码
tracing = "0.1" # 日志处理
thiserror = "1" # 错误处理
dashmap = "5.0.0"
http = "0.2" # 我们使用 HTTP status code 所以引入这个类型库
sled = "0.34"
tokio-util = { version = "0.6", features = ["codec"] }
flate2 = "1"
tokio = { version = "1", features = ["full"] } # 异步网络库

[dev-dependencies]
anyhow = "1" # 错误处理
async-prost = "0.3" # 支持把 protobuf 封装成 TCP frame
futures = "0.3" # 提供 Stream trait
tracing-subscriber = "0.3" # 日志处理
tempfile = "3"

[build-dependencies]
prost-build = "0.9" # 编译 protobuf